k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: skju
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
        - name: otel-config
          configMap:
            name: otel-collector-config
      containers:
        - name: app
          # image: ghcr.io/blumenplace/skju-serv:latest
          image: skju-serv:latest
        - name: otel-collector
          image: otel/opentelemetry-collector:latest
          args: ["--config=/etc/otelcol/config.yaml"]
          volumeMounts:
            - name: otel-config
              mountPath: /etc/otelcol
              readOnly: true
